--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,11 @@ body {
     z-index: 1000;
     box-shadow: 0 4px 10px #1D428A;
     background-color: rgba(200, 16, 46, 0.9);
+    transition: transform 0.3s ease-in-out;
+}
+
+.navbar.hidden {
+    transform: translateY(-100%);
 }
 
 .navbar nav ul {
@@ -68,19 +73,19 @@ body {
 
 /* General Content Styling */
 .content {
-    height: calc(100vh - 12vh);
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    scroll-margin-top: 12vh;
+    /* scroll-margin-top: 12vh; */
     box-sizing: border-box;
-    margin-bottom: 12vh;
 }
 
 .content#home {
+    height: calc(100vh - 12vh);
     margin-top: 12vh; 
-    padding-top: 0;
+    /* padding-top: 0; */
     background-image: url('assets/arena2.png');
     background-size: cover;
     background-position: center;
