--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Caveat:wght@400..700&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Dancing+Script:wght@400..700&family=Fjalla+One&family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Great+Vibes&family=Indie+Flower&family=Lora:ital,wght@0,400..700;1,400..700&family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Satisfy&display=swap');
 /* General Styling */
 * {
     margin: 0;
@@ -85,7 +86,7 @@ body {
 .content#home {
     height: calc(100vh - 12vh);
     margin-top: 12vh; 
-    /* padding-top: 0; */
+    scroll-margin-top: 12vh;
     background-image: url('assets/arena2.png');
     background-size: cover;
     background-position: center;
