--- a/responsive.css
+++ b/responsive.css
@@ -1,11 +1,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee&family=Caveat:wght@400..700&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Dancing+Script:wght@400..700&family=Fjalla+One&family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Great+Vibes&family=Indie+Flower&family=Lora:ital,wght@0,400..700;1,400..700&family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Satisfy&display=swap');
 /* Hiding responsive elements for main css sheet */
+@media only screen and (min-width: 992px){
 
+.content#mobile-home{
+    display: none;
+}
+
+}
 /* For tablets and smaller */
 @media only screen and (max-width: 992px){
 
+/* Hiding Main elements */
+
 .navbar {
     display: none;
+}
+
+.content#home {
+    display: none;
+}
+
+.content#contacts {
+    display: none;
+}
+
+/* start */
+
+body {
+    background-color: #0A4B9B;
+    color: #FFF;
+}
+
+.content#mobile-home {
+    height: 100vh;
+    max-width: 100vw;
+    margin-top: 0;
+    scroll-margin-top: 0;
+    background-image: url('assets/phone-background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+#screen-title {
+    color: #FFF;
+    font-family: 'Dancing Script', cursive;
+    font-size: 40px;
+    text-shadow: 2px 2px 2px #C8102E;
+    padding-top: 5vh;
+}
+
+h2 {
+    color: #FFF;
+}
+
+.fixtures {
+    width: 100%;
 }
 
 }
