--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
 
 .navbar.hidden {
     transform: translateY(-100%);
+    transition-delay: 0.5s;
 }
 
 .navbar nav ul {
@@ -68,7 +69,7 @@ body {
 
 .games-container {
     scrollbar-width: thin;
-    scrollbar-color: rgba(200, 16, 46, 0.5) transparent;
+    scrollbar-color: rgba(29, 66, 138, 0.7) transparent;
 }
 
 
@@ -87,7 +88,7 @@ body {
     height: calc(100vh - 12vh);
     margin-top: 12vh; 
     scroll-margin-top: 12vh;
-    background-image: url('assets/arena2.png');
+    background-image: url('assets/landing-page.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -99,7 +100,7 @@ body {
     font-family: 'Dancing Script', cursive;
     font-size: 80px;
     text-shadow: 5px 5px 5px #C8102E;
-    margin-bottom: 20px;
+    padding-top: 12vh;
 }
 
 
