--- a/styles.css
+++ b/styles.css
@@ -25,10 +25,10 @@ body {
     transition: transform 0.3s ease-in-out;
 }
 
-.navbar.hidden {
+/* .navbar.hidden {
     transform: translateY(-100%);
     transition-delay: 0.5s;
-}
+} */
 
 .navbar nav ul {
     display: flex;
@@ -89,9 +89,10 @@ body {
     margin-top: 12vh; 
     scroll-margin-top: 12vh;
     background-image: url('assets/landing-page.jpg');
-    background-size: cover;
+    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
     position: relative;
 }
 
