added landing screen with parallax effect and hidden navigation

--- a/responsive.css
+++ b/responsive.css
@@ -29,6 +29,9 @@
 @media only screen and (max-width: 992px){
 
 /* Hiding Main elements */
+.content#landing {
+    display:none;
+}
 
 .navbar {
     display: none;
