--- a/styles.css
+++ b/styles.css
@@ -84,12 +84,12 @@ body {
     /* height: calc(100vh - 12vh); */
     /* margin-top: 12vh;  */
     scroll-margin-top: 12vh;
-    background-image: url('assets/cade-all-star.jpg');
-    background-attachment: fixed;
+    /* background-image: url('assets/cade-all-star.jpg'); */
+    /* background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    position: relative; */
 }
 
 .content#home {
@@ -109,6 +109,37 @@ body {
     padding-top: 12vh;
 }
 
+/* Landing screen split */
+
+section {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+section .side {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+section .side#side1 {
+    clip-path: polygon(0 0, 0% 100%, 100% 100%);
+}
+section .side#side2 {
+    clip-path: polygon(0 0, 100% 0, 100% 100%);
+}
+section .side img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 /* Styling specifically for the home subtitle */
 .content#home h1 {
