added current player stats and python functionality to fetch

--- a/styles.css
+++ b/styles.css
@@ -308,6 +308,10 @@ section .side img {
     z-index: 2000;
 }
 
+.overlay.active {
+    display: flex;
+  }
+
 
 /* Overlay content animation */
 @keyframes scaleUp {
