--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -97,7 +97,7 @@ body {
     max-width: 100vw;
     margin-top: 0;
     scroll-margin-top: 0;
-    background-image: url('assets/phone-background.jpg');
+    background-image: url('../assets/phone-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
